eglfs: Make backingstore handle unexpected scenarios gracefully

On platforms other than Android eglfs does not allow having multiple
windows when one of the windows is OpenGL. On Android however this has
to be handled silently, without aborting the application. The
backingstore lacked the necessary checks so QGLWidget-based apps were
crashing. This is now corrected.

Task-number: QTBUG-34412
Change-Id: Ifb469fa9ef391b24aed3942430c0347276809ba5
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 6ea7336e4aed916c5c9602c51d7d9646a289e83b https://github.com/qt/qtbase/commit/6ea7336e4aed916c5c9602c51d7d9646a289e83b